--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>JavaScript Basics – Challenge</title>
-    <link href="css/style.css" rel="stylesheet"> 
+    <title>The Witcher Quiz</title>
+    <link href="style.css" rel="stylesheet"> 
   </head>
   <body>
-    <main></main>
-    <script src="js/quiz.js"></script>   
+    <h1>The Witcher Quiz</h1>
+    <main>
+    </main>
+    <script src="quiz.js"></script>   
   </body>
 </html>
